# viewstrap

./: Cargo.toml  README.md
assets/: index.html
src/: bootstrap.rs  main.rs
